fix(FED): added missing license headers
Signed-off-by: Rifa Achrinza <25147899+achrinza@users.noreply.github.com>

--- a/FED/Assignments/Week 4/Week4Practical/css/styles.css
+++ b/FED/Assignments/Week 4/Week4Practical/css/styles.css
@@ -1,4 +1,10 @@
-﻿body {
+﻿/*
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+*/
+
+body {
     margin: 0;
     background-color: #fdfdfd;
     color: #353535;
