--- a/FED/Assignments/Week 6/Week6Practical_Start/css/flex-menu-styles.css
+++ b/FED/Assignments/Week 6/Week6Practical_Start/css/flex-menu-styles.css
@@ -1,4 +1,10 @@
-﻿html {
+﻿/*
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+*/
+
+html {
     box-sizing: border-box;
 }
 
