--- a/FED/Tests/1/css/styles.css
+++ b/FED/Tests/1/css/styles.css
@@ -1,5 +1,10 @@
-﻿body
-{
+﻿/*
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+*/
+
+body {
     font-family: Arial, Arial, Helvetica, sans-serif;
 }
 
