--- a/FED/Assignments/Week 8/Week8Practical/styles.css
+++ b/FED/Assignments/Week 8/Week8Practical/styles.css
@@ -1,3 +1,9 @@
+/*
+    Copyright (c) 2019 Rifa I. Achrinza
+    This document is licensed under MIT license (See LICENSE for details)
+    SPDX-Short-Identifier: MIT
+*/
+
 .block-bmi-calc {
     border: 10px solid #7F7F00;
     font-family: sans-serif;
